# libraryTask

./: library.cabal
src/: MyLib.hs
