cabal-version:      2.4
name:               library
version:            0.1.0.0
author:             Dai
maintainer:         daig@users.noreply.github.com

library
    exposed-modules:  MyLib

    build-depends:    base ^>=4.16.4.0
                 ,    containers
                 ,    text
                 ,    isbn
    hs-source-dirs:   src
    default-language: GHC2021
